--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <br>
             <div class="col-12 mx-auto">
-                <iframe width="500" height="500" style="border:3px solid black; margin:auto; display:block" frameborder="0" src="https://crosswordlabs.com/embed/techword-challenge-1"></iframe>
+                <iframe style="border:3px solid black; margin:auto; display:block;width:100%;height:70vh" frameborder="0" src="https://crosswordlabs.com/embed/techword-challenge-1"></iframe>
             </div>
         </div>
     </div>
